# lcsh-chatbot

./: .env.example  .gitignore  building_prompt.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  app.py  file_utils.py  gemini_client.py  lcsh_api.py
